# Web_HW_1

./: main.py  pyproject.toml
BotAssistant/: address_book.py  bot_work.py  console_view.py  contact_book.py  fields.py  main.py  note_book.py  notes_book.py  person.py  view.py
bot assistant/: address_book.py  bot_work.py  contact_book.py  fields.py  notes_book.py  person.py
